<resources>
    <string name="app_name">KidVacc</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="existing_health_conditions">Existing Health Conditions?</string>
    <string name="vaccines_taken">Vaccines Taken</string>
    <string name="gender">Gender</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="add_a_child">ADD A CHILD</string>
    <string name="infobase">InfoBase</string>
    <string name="submit">Submit</string>
    <string name="what_is_your_question">What is your question?</string>
    <string name="more_questions">More questions?</string>
    <string name="where_can_i_get_vaccines_for_infants">Where can I get vaccines for infants?</string>
    <string name="what_is_vaccination">What is Vaccination?</string>
    <string name="is_vaccination_important">Is Vaccination important?</string>
    <string name="do_infants_need_to_take_vaccines">Do infants need to take vaccines?</string>
    <string name="what_vaccines_should_an_infant_take">What vaccines should an infant take?</string>
    <string name="when_should_infants_take_vaccines">When should infants take vaccines?</string>
    <string name="do_vaccines_have_side_effects_on_infants">Do vaccines have side-effects on infants?</string>
    <string name="infobase_caps">INFOBASE</string>
    <string name="got_questions_we_ve_got_you_covered">Got questions? We’ve got you covered!</string>
    <string name="vaccines_cap">VACCINES</string>
    <string name="check_for_vaccines_and_hospitals_around_you">Check for vaccines and hospitals around you!</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="check_hospitals">Check Hospitals</string>
    <string name="tolaniwilliams_gmail_com_2348012345678_10b_utopia_street_agege_lagos_state">tolaniwilliams@gmail.com <br /> +2348012345678 <br />10B, Utopia Street, Agege, Lagos State</string>
    <string name="child">Child</string>
    <string name="vaccine">Vaccine</string>
    <string name="hospital">Hospital</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="create_an_account_for_ease_of_access_and_use">Create an Account for ease of access and use.</string>
    <string name="sign_up_with_email">Sign up with Email</string>
    <string name="have_an_account_already">Have an account already?</string>
    <string name="login_here">Login here.</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="recent">Recent</string>
    <string name="older">Older</string>
    <string name="book_appointment">BOOK APPOINTMENT</string>
    <string name="confirm_details">CONFIRM DETAILS</string>
    <string name="proceed_to_payment">Proceed To Payment</string>
    <string name="child_name">Child Name</string>
    <string name="child_date_of_birth">Child Date of Birth</string>
    <string name="vaccine_name">Vaccine Name</string>
    <string name="hospital_details">Hospital Details</string>
    <string name="scheduled_date">Scheduled Date</string>
    <string name="payment_method">Payment Method</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="tolani_s_little_ones">Tolani’s Little Ones</string>
    <string name="edit">EDIT</string>
    <string name="appointments">APPOINTMENTS</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="book_appointment1">Book Appointment</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="faqs">FAQs</string>
    <string name="help_and_support">Help and Support</string>
    <string name="privacy_and_security">Privacy and Security</string>

    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="registered_children">Registered <br/> Children</string>
    <string name="hospitals">HOSPITALS</string>
</resources>