<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.zuri.kidvacc_mobile_pjt_37.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.zuri.kidvacc_mobile_pjt_37.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.zuri.kidvacc_mobile_pjt_37.ui.dashboard.AppointmentFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_appointment" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.zuri.kidvacc_mobile_pjt_37.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>