<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.infobase.Info_Base_Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/existing_health_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_questions"
            android:textColor="@color/text_color"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/edittext_background_1"
            android:orientation="vertical"
            android:elevation="@dimen/_1sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:background="@android:color/transparent"
                android:elevation="-1dp"
                android:gravity="start"
                android:hint="@string/what_is_your_question"
                android:padding="@dimen/_10sdp"
                android:textStyle="italic" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_button"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:backgroundTint="#DA8F06"
                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>