<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/back"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="@dimen/_20sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#08517A" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/confirm_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="#08517A"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constrainedHeight="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/child_name"
                    android:textColor="#7D7B79"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/child_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Adebayo Tochi"
                    android:textColor="#363636"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/child_date_of_birth"
                    android:textColor="#7D7B79"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:id="@+id/date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="02 JUNE 2021"
                    android:textColor="#363636"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vaccine_name"
                    android:textColor="#7D7B79"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="IPV-1"
                    android:textColor="#363636"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital_details"
                    android:textColor="#7D7B79"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Holy Cross Maternity, 23 Temitope Ayo Street, Gbagada, Lagos"
                    android:textColor="#363636"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scheduled_date"
                    android:textColor="#7D7B79"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="02 JULY 2021"
                    android:textColor="#363636"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_method"
                    android:textColor="#7D7B79"
                    android:textAllCaps="true"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Debit Card"
                    android:textColor="#363636"
                    android:gravity="center_vertical"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/proceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/proceed_to_payment"
                />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>