<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.onboarding_page.OnBoardingActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/kidvacc_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintBottom_toTopOf="@id/relativeLayout"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:id="@+id/layout_dots"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="horizontal" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_60sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerInParent="true"
            android:visibility="visible">

            <TextView
                android:id="@+id/next"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:text="@string/next"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:background="@drawable/next_button_background"
                />

            <TextView
                android:id="@+id/skip"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:text="@string/skip"
                android:textColor="@color/text_color"
                android:gravity="center"
                android:background="@drawable/skip_button_background"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_45sdp"
            android:text="@string/login"
            android:gravity="center"
            android:background="@drawable/login_buttin_background"
            android:textColor="#FFFFFF"
            android:visibility="gone"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>